--- a/slides/slides_reproducibility.html
+++ b/slides/slides_reproducibility.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Accessibility and Reproducibility</title>
     <meta charset="utf-8" />
@@ -19,14 +19,130 @@ class: center, middle, inverse, title-slide
 ---
 
 
-# It depends...
+
+# Congratulations!
+
+You now have a project!
+- Your project structure is accessible
+- Your code is readable and invites re-use
+- The project is under version control
+- It has a landing page on Github, with user information
+
+Are you done?
+
+--
+
+_Not quite yet!_
+It's time to think about the future...
+
+--
+
+#### Will GitHub still be here in five years? Will my account? Will this repository?
+
+---
+# Archiving the project
+
+- Create a project release to get a feel for it:
+![release](https://guides.github.com/activities/citable-code/repo-view.png)
+
+- Fill out the form but tick the 'this is a pre-release' box.
+
+- If you do this after connecting the repository to Zenodo, the release will trigger Zenodo to archive the project.
+
+- After completing the workflow, your project will have a permanent home on Zenodo, including a **Digital Object Identifier** (DOI)!
+
+- _Check the full how-to [on GitHub](https://guides.github.com/activities/citable-code/)._
+
+---
+# All done?
+
+
+#### It depends...
 
 ![dependencies](https://inlooxcdn.azureedge.net/var/corporate_site/storage/images/media/images/blog/project-dependencies-header/940680-2-eng-GB/project-dependencies-header.jpg)
 
 ---
-# It depends...
+# Dependencies
+
+Dependencies and versions can stop your users/readers from being able to run your code.
 
 ![reproducibility](images/screenshots/comprep.png)
+.footnote[Source: [Timo B. Roettger on OSF](https://osf.io/e9bu7/).]
+
+---
+# The reproducibility trade-off
+
+- Making your project 100% reproducible can be tricky.
+
+![](https://rviews.rstudio.com/post/2018-01-17-package-management-for-reproducible-r-code_files/spectrum-ex.png)
+- That said, tools like Docker and Singularity probably sound more daunting than they actually are.
+
+- Even more user-friendly (though possibly expensive...) options exist: like [CodeOcean](https://codeocean.com).
+
+- **But**: due diligence starts at simply declaring dependencies.
+
+.footnote[Image source: [Cole Arendt at Rstudio.com](https://rviews.rstudio.com/2018/01/18/package-management-for-reproducible-r-code/)]
+---
+# R: session_info
+
+
+```r
+sessionInfo()
+```
+
+```
+## R version 3.6.1 (2019-07-05)
+## Platform: x86_64-apple-darwin15.6.0 (64-bit)
+## Running under: macOS Sierra 10.12.6
+## 
+## Matrix products: default
+## BLAS:   /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
+## LAPACK: /Library/Frameworks/R.framework/Versions/3.6/Resources/lib/libRlapack.dylib
+## 
+## locale:
+## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+## 
+## attached base packages:
+## [1] parallel  stats     graphics  grDevices utils     datasets  methods   base     
+## 
+## other attached packages:
+##  [1] pheatmap_1.0.12   tidyr_1.0.0       readr_1.3.1       doParallel_1.0.15 iterators_1.0.12 
+##  [6] foreach_1.4.7     caret_6.0-84      ggplot2_3.2.1     lattice_0.20-38   data.table_1.12.6
+## [11] TempPackage_1.0   docstring_1.0.0  
+## 
+## loaded via a namespace (and not attached):
+##  [1] nlme_3.1-140       lubridate_1.7.4    RColorBrewer_1.1-2 rprojroot_1.3-2   
+##  [5] tools_3.6.1        backports_1.1.5    R6_2.4.1           rpart_4.1-15      
+##  [9] lazyeval_0.2.2     colorspace_1.4-1   nnet_7.3-12        withr_2.1.2       
+## [13] tidyselect_0.2.5   prettyunits_1.0.2  processx_3.4.1     curl_4.2          
+## [17] compiler_3.6.1     cli_1.1.0          xml2_1.2.2         desc_1.2.0        
+## [21] labeling_0.3       scales_1.1.0       callr_3.3.2        rappdirs_0.3.1    
+## [25] stringr_1.4.0      digest_0.6.23      rmarkdown_2.0      pkgconfig_2.0.3   
+## [29] htmltools_0.4.0    rlang_0.4.2        rstudioapi_0.10    xaringan_0.13.2   
+## [33] farver_2.0.1       generics_0.0.2     jsonlite_1.6       dplyr_0.8.3       
+## [37] ModelMetrics_1.2.2 magrittr_1.5       Matrix_1.2-18      Rcpp_1.0.3        
+## [41] munsell_0.5.0      reticulate_1.14    lifecycle_0.1.0    stringi_1.4.3     
+## [45] yaml_2.2.0         MASS_7.3-51.4      pkgbuild_1.0.6     plyr_1.8.4        
+## [49] recipes_0.1.7      grid_3.6.1         promises_1.1.0     crayon_1.3.4      
+## [53] splines_3.6.1      hms_0.5.2          zeallot_0.1.0      knitr_1.26        
+## [57] ps_1.3.0           pillar_1.4.2       reshape2_1.4.3     codetools_0.2-16  
+## [61] stats4_3.6.1       pkgload_1.0.2      servr_0.15         glue_1.3.1        
+## [65] evaluate_0.14      vctrs_0.2.0        httpuv_1.5.2       testthat_2.3.0    
+## [69] gtable_0.3.0       purrr_0.3.3        assertthat_0.2.1   xfun_0.11         
+## [73] gower_0.2.1        mime_0.7           prodlim_2019.11.13 roxygen2_7.0.1    
+## [77] later_1.0.0        class_7.3-15       survival_2.44-1.1  timeDate_3043.102 
+## [81] tibble_2.1.3       lava_1.6.6         ellipsis_0.3.0     ipred_0.9-9
+```
+
+---
+# What works for you?
+
+- Declare how your project works **for you**.
+  - What language, what version?
+  - What packages/libraries do you load
+  - What OS do you use? (Does it work on your collaborator's system?)
+
+- This information should be in the requirements file of your project.
 
 
 ---
@@ -42,16 +158,20 @@ Initialize packrat
 packrat::init("~/path/to/your/project")
 ```
 
-Later on, install some package
-It will be installed in `~/path/to/your/project/packrat/lib`
-```r
-install.packages("reshape2")
-```
+Your packages are now stored in `~/path/to/your/project/packrat/lib`
 
-Take a snapshot of installed packages
+If you need to re-save dependencies (for example, if you have added another package), you can use packrat:
+
 ```r
 packrat::snapshot()
 ```
+
+---
+# Your turn!
+
+Add detailed requirement information to your requirements file.
+
+Add basic dependency information to your readme file: what version of your language is required, and which packages does a user need to load before running your project?
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
