Added acknowledgements slide

--- a/slides/slides_introduction.html
+++ b/slides/slides_introduction.html
@@ -20,6 +20,17 @@ class: center, middle, inverse, title-slide
 
 
 
+# Thanks!
+
+- To you for being here!
+
+- To the [Open Science Community Utrecht (OSCU)](https://openscience-utrecht.com) and [Research Data Management Support (RDM Support)](https://www.uu.nl/en/research/research-data-management) for supporting the development of this workshop
+
+- To Armel Lefebvre, Bianca Kramer, Cedric Thieulot, Erik van Sebille, Jeroen Bosman, Jeroen Ooms, Jonathan de Bruin, Lukas van de Wiel, Mateusz Kuzak, Menno Fraters, Philippe Delandmeter, and Renato Alves, for helping develop this workshop
+
+- To our teachers today: Armel, Barbara, Sergio and Bianca
+
+---
 # Be Reproducible!
 .pull-left-medium[
 What is reproducibility?
