amended error management graphic and made separate builds

--- a/slides/slides_code-quality.html
+++ b/slides/slides_code-quality.html
@@ -554,11 +554,11 @@ unittest.main(argv=['trick to make it work in a notebook'], exit=False)
 ```
 
 ```
-## &lt;unittest.main.TestProgram object at 0x1164ba550&gt;
+## &lt;unittest.main.TestProgram object at 0x117a99550&gt;
 ## 
 ## ..
 ## ----------------------------------------------------------------------
-## Ran 2 tests in 0.001s
+## Ran 2 tests in 0.000s
 ## 
 ## OK
 ```
@@ -584,7 +584,7 @@ class TestStringMethods(unittest.TestCase):
 
 
 ```
-## &lt;unittest.main.TestProgram object at 0x1164d7240&gt;
+## &lt;unittest.main.TestProgram object at 0x117ab6240&gt;
 ## 
 ## ..F
 ## ======================================================================
