--- a/slides/slides_reproducibility.html
+++ b/slides/slides_reproducibility.html
@@ -26,7 +26,7 @@ You now have a project!
 - Your project structure is accessible
 - Your code is readable and invites re-use
 - The project is under version control
-- It has a landing page on Github, with user information
+- It has a landing page on Github, with information for a user
 
 Are you done?
 
@@ -43,15 +43,20 @@ It's time to think about the future...
 # Archiving the project
 
 - Create a project release to get a feel for it:
+
 ![release](https://guides.github.com/activities/citable-code/repo-view.png)
 
-- Fill out the form but tick the 'this is a pre-release' box.
+- Fill out the form, but tick the 'this is a pre-release' box.
 
+--
+_No need to do this now, but for future reference:_
 - If you do this after connecting the repository to Zenodo, the release will trigger Zenodo to archive the project.
 
 - After completing the workflow, your project will have a permanent home on Zenodo, including a **Digital Object Identifier** (DOI)!
 
 - _Check the full how-to [on GitHub](https://guides.github.com/activities/citable-code/)._
+
+
 
 ---
 # All done?
@@ -82,7 +87,9 @@ Dependencies and versions can stop your users/readers from being able to run you
 - **But**: due diligence starts at simply declaring dependencies.
 
 .footnote[Image source: [Cole Arendt at Rstudio.com](https://rviews.rstudio.com/2018/01/18/package-management-for-reproducible-r-code/)]
+
 ---
+
 # R: session_info
 
 
@@ -96,54 +103,21 @@ sessionInfo()
 ## Running under: macOS Sierra 10.12.6
 ## 
 ## Matrix products: default
-## BLAS:   /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
+## BLAS:   /Library/Frameworks/R.framework/Versions/3.6/Resources/lib/libRblas.0.dylib
 ## LAPACK: /Library/Frameworks/R.framework/Versions/3.6/Resources/lib/libRlapack.dylib
 ## 
 ## locale:
 ## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
 ## 
 ## attached base packages:
-## [1] parallel  stats     graphics  grDevices utils     datasets  methods   base     
-## 
-## other attached packages:
-##  [1] pheatmap_1.0.12   tidyr_1.0.0       readr_1.3.1       doParallel_1.0.15 iterators_1.0.12 
-##  [6] foreach_1.4.7     caret_6.0-84      ggplot2_3.2.1     lattice_0.20-38   data.table_1.12.6
-## [11] TempPackage_1.0   docstring_1.0.0  
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] nlme_3.1-140       lubridate_1.7.4    RColorBrewer_1.1-2 rprojroot_1.3-2   
-##  [5] tools_3.6.1        backports_1.1.5    R6_2.4.1           rpart_4.1-15      
-##  [9] lazyeval_0.2.2     colorspace_1.4-1   nnet_7.3-12        withr_2.1.2       
-## [13] tidyselect_0.2.5   prettyunits_1.0.2  processx_3.4.1     curl_4.2          
-## [17] compiler_3.6.1     cli_1.1.0          xml2_1.2.2         desc_1.2.0        
-## [21] labeling_0.3       scales_1.1.0       callr_3.3.2        rappdirs_0.3.1    
-## [25] stringr_1.4.0      digest_0.6.23      rmarkdown_2.0      pkgconfig_2.0.3   
-## [29] htmltools_0.4.0    rlang_0.4.2        rstudioapi_0.10    xaringan_0.13.2   
-## [33] farver_2.0.1       generics_0.0.2     jsonlite_1.6       dplyr_0.8.3       
-## [37] ModelMetrics_1.2.2 magrittr_1.5       Matrix_1.2-18      Rcpp_1.0.3        
-## [41] munsell_0.5.0      reticulate_1.14    lifecycle_0.1.0    stringi_1.4.3     
-## [45] yaml_2.2.0         MASS_7.3-51.4      pkgbuild_1.0.6     plyr_1.8.4        
-## [49] recipes_0.1.7      grid_3.6.1         promises_1.1.0     crayon_1.3.4      
-## [53] splines_3.6.1      hms_0.5.2          zeallot_0.1.0      knitr_1.26        
-## [57] ps_1.3.0           pillar_1.4.2       reshape2_1.4.3     codetools_0.2-16  
-## [61] stats4_3.6.1       pkgload_1.0.2      servr_0.15         glue_1.3.1        
-## [65] evaluate_0.14      vctrs_0.2.0        httpuv_1.5.2       testthat_2.3.0    
-## [69] gtable_0.3.0       purrr_0.3.3        assertthat_0.2.1   xfun_0.11         
-## [73] gower_0.2.1        mime_0.7           prodlim_2019.11.13 roxygen2_7.0.1    
-## [77] later_1.0.0        class_7.3-15       survival_2.44-1.1  timeDate_3043.102 
-## [81] tibble_2.1.3       lava_1.6.6         ellipsis_0.3.0     ipred_0.9-9
+##  [1] compiler_3.6.1  magrittr_1.5    tools_3.6.1     htmltools_0.4.0
+##  [5] xaringan_0.13.2 yaml_2.2.0      Rcpp_1.0.3      stringi_1.4.3  
+##  [9] rmarkdown_2.0   knitr_1.26      stringr_1.4.0   xfun_0.11      
+## [13] digest_0.6.23   rlang_0.4.2     evaluate_0.14
 ```
-
----
-# What works for you?
-
-- Declare how your project works **for you**.
-  - What language, what version?
-  - What packages/libraries do you load
-  - What OS do you use? (Does it work on your collaborator's system?)
-
-- This information should be in the requirements file of your project.
-
 
 ---
 # R: Packrat
@@ -165,19 +139,30 @@ If you need to re-save dependencies (for example, if you have added another pack
 ```r
 packrat::snapshot()
 ```
+---
+# What works for you?
+
+- Declare how your project works **for you**.
+  - What language, what version?
+  - What packages/libraries do you load
+  - What OS do you use? (Does it work on your collaborator's system?)
+
+- This information should be in the requirements file of your project.
 
 ---
 # Your turn!
 
-Add detailed requirement information to your requirements file.
+1. Add detailed requirement information to your requirements file.
 
-Add basic dependency information to your readme file: what version of your language is required, and which packages does a user need to load before running your project?
-
+1. Add basic dependency information to your readme file:
+  - What version of your language is required?
+  - Which packages does a user need to load before running your project?
+  - Can you provide installation instructions?
 
 ---
 # Are you ready?
 
-Let's exchange projects!
+#### Let's exchange projects!
 
 Please go to [tinyurl.com/repco-share](https://docs.google.com/spreadsheets/d/1FlQnSj8ipbUNhZgr_nS1PHnaapL8SvamWcfPjKTaBhA/edit#gid=0), and fill out:
 - your project name
@@ -188,9 +173,10 @@ Please go to [tinyurl.com/repco-share](https://docs.google.com/spreadsheets/d/1F
 in the yellow columns.
 --
 
-Now, write your name in one of the blue columns behind a project you will reproduce.
+#### Now, write your name in one of the blue columns behind a project you will reproduce.
 
 We hope that everyone's repository will get a reproduction-attempt, so only add your name to the second column if there are no repos left (for you)!
+--
 
 #### As you reproduce, please give your colleague feedback!
 
