Adjusted to online for 2020-03-24

--- a/slides/slides_introduction.html
+++ b/slides/slides_introduction.html
@@ -28,12 +28,18 @@ class: center, middle, inverse, title-slide
 
 - To Armel Lefebvre, Bianca Kramer, Cedric Thieulot, Erik van Sebille, Jeroen Bosman, Jeroen Ooms, Jonathan de Bruin, Lukas van de Wiel, Mateusz Kuzak, Menno Fraters, Philippe Delandmeter, and Renato Alves, for helping develop this workshop
 
-- To your teachers today!
+- To your teachers and helpers today!
+
+--
+
+### Please open the slides!
+You can find the slides at [tinyurl.com/repcopilot](https://utrechtuniversity.github.io/workshop-computational-reproducibility/). You may need links or code from these slides, so do open them.
+
 
 ---
 # Who are you? What brings you here?
 
-Present yourself in this collaborative document: [tinyurl.com/repcocollab](https://docs.google.com/document/d/1bYmI9jaOTQLNbt3umDMl-RvGs3nzz-_NmVSTGEc-6_Q/edit)
+Present yourself in this collaborative document: [tinyurl.com/repcodoc-2020-03-24](https://docs.google.com/document/d/1u0FmLR3kQfGW0Qpqbo4FZQJLhlEryKEPm7Fuinr3ZVk/edit?usp=sharing)
 
 - Your name
 - Your affiliation
@@ -47,6 +53,41 @@ Maybe add something about yourself:
 - _or anything else!_
 
 ---
+# How to ask for help?
+
+#### What you can do:
+- Use the Zoom chat to ask questions (*preferred!*)
+- Put an X in the purple column of the status chart (page 2 of [tinyurl.com/repcodoc-2020-03-24](https://docs.google.com/document/d/1u0FmLR3kQfGW0Qpqbo4FZQJLhlEryKEPm7Fuinr3ZVk/edit?usp=sharing)) (*if you are stuck but don't know why*)
+
+#### What we will do:
+- Helpers will answer you in a public or private chat on Zoom
+- OR: helper posts a link to an individual google hangout, where they can assist you.
+
+---
+# General guidelines (and advice!)
+- Ask for help when you need it, and alert us when we need to slow down!
+
+--
+
+- Please mute yourself when you are not speaking (bottom right side of your Zoom window).
+
+--
+
+- We appreciate your video, but only share if you are comfortable.
+
+--
+
+- Use the green column of the status chart when you finished an exercise.
+
+--
+
+- Close as many unnecessary windows and programs as possible.
+
+--
+
+- Take a computer break when we take a break: a timer will show when we return!
+
+---
 # Be Reproducible!
 .pull-left-medium[
 What is reproducibility?
@@ -56,13 +97,13 @@ What is reproducibility?
 
 - Not the same as **replication**, where _different_ methods and _different_ data lead to the same research findings
 
-Why do you want to make your work reproducible?
+Why make your work reproducible?
 
-- for whom?
+- for other scientists building on your work.
 
-- what do they gain?
+- for colleagues using your tools.
 
-- what do you gain?
+- for yourself, in six months!
 ]
 
 --
@@ -71,7 +112,7 @@ Why do you want to make your work reproducible?
 ![futureself](https://imgs.xkcd.com/comics/future_self.png)
 ]
 ---
-# A great example
+# Making a start
 ![example](images/screenshots/badexample.png)
 
 ---
@@ -81,7 +122,7 @@ Why do you want to make your work reproducible?
 - Access to the data
 - (And let's assume we can replicate the enviroment)
 
-Do you feel confident about this project?
+How confident do you feel?
 --
 
 &gt; This code is a kludgly, ugly, inefficient mess. 
@@ -99,19 +140,9 @@ We need to do more: we need to inspire trust.
 
 
 ---
-# What does a workflow look like?
-
-![ds-workflow](https://github.com/allisonhorst/stats-illustrations/raw/master/openscapes/environmental-data-science-r4ds-general.png)
-- data cleaning is an essential first step
-- think modular: each step requires own input, process, output
-
-.footnote[
-Illustration by [Allison Horst](https://github.com/allisonhorst/stats-illustrations)]
-
----
 # What will we do today?
 
-We will take you through a workflow (in a broader sense!)
+We will take you through a workflow (in a broad sense!)
 
 --
 
@@ -136,29 +167,18 @@ We will end by trying to reproduce each others' projects!
 
 - Our group today has many different abilities and experiences. We hope you will value this as much as we do!
 
-- Feel free and safe to share your expertise and experiences, either by helping your neighbor or by showing everyone.
+- Feel free and safe to share your expertise and experiences.
 
-- E.g.: if you do not know a certain word or term (or you think others may not know it): put it in the glossary, at [tinyurl.com/repcocollab](https://docs.google.com/document/d/1bYmI9jaOTQLNbt3umDMl-RvGs3nzz-_NmVSTGEc-6_Q/edit)
+- E.g.: if you do not know a certain word or term (or you think others may not know it): put it in the glossary; if you do: fill in the blanks!
 
 --
 
 #### Our objectives for you
 We want to teach you **good habits** that will make your work more accessible, trustworthy, and reproducible by others. In doing so, we have tried to identify those habits that are a **good return on investment**: meaning, they save you time in the not-so-long run.
 
+--
 
-
----
-# Let's get practical!
-
-- You can find the slides at [tinyurl.com/repcopilot](https://utrechtuniversity.github.io/workshop-computational-reproducibility/). You may need links or code from these slides, so do open them.
-
-- There's also a (tentative) schedule.
-
-- This is a workshop, so do follow along! Use your sticky notes to signal to us: 
-  - green means: I'm ready for the next step!
-  - pink means: I need assistance, please.
-  
-- If you are online: use the status chart in [tinyurl.com/repcocollab](https://docs.google.com/document/d/1bYmI9jaOTQLNbt3umDMl-RvGs3nzz-_NmVSTGEc-6_Q/edit) to indicate your progress!
+### And finally: we hope you enjoy the day!
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
